--- a/index.htm
+++ b/index.htm
@@ -11,6 +11,7 @@
 </head>
 <body>
   <div id="app">
+
     <main>
       <div class="main-container">
         <div class="back">
@@ -19,8 +20,57 @@
         </div>
         <h1>Formulário de matrícula</h1>
         <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
+
+        <form enctype="multipart/form-data">
+          <fieldset>
+            <legend class="child-info">Informações da criança</legend>
+            
+            <div class="input-wrapper">
+              <label for="fullname">Nome completo</label>
+              <input 
+                id="fullname" 
+                name="fullname"
+                type="text" 
+                placeholder="Qual o nome da criança"
+              >
+            </div>
+            
+            <div class="input-wrapper">
+              <label for="birthdate">Data de nascimento</label>
+              <input 
+                id="birthdate" 
+                name="birthdate"
+                type="date" 
+                lang="pt-BR"
+              >
+            </div>
+
+            <div class="select-wrapper">
+              <label for="gender">Sexo</label>
+              <select name="gender" id="gender">
+                <option value="male">Masculino</option>
+                <option value="female">Feminino</option>
+                <option value="na">Prefiro não informar</option>
+              </select>
+            </div>
+
+            <div class="textarea-wrapper">
+              <label for="medical-info">Informações médicas</label>
+              <textarea name="medical-info" id="medical-info" cols="30" rows="10" placeholder="A criança possui alguma condição médica que a escola deve estar ciente? (Se sim, especifique)"></textarea>
+            </div>
+
+            <div class="droparea-wrapper">
+              <label for="birth-file">Certidão de nascimento</label>
+              <input type="file" name="birth-file" id="birth-file">
+              <img src="assets/icons/cloud-upload.svg" alt="">
+              <p>Clique aqui para <br/> selecionar os arquivos</p>
+            </div>
+
+          </fieldset>
+        </form>
       </div>
     </main>
+
     <aside>
       <div class="aside-container">
         <header>
@@ -33,6 +83,7 @@
         <img src="assets/Illustration.svg" alt="">
       </div>
     </aside>
+
   </div>
 </body>
 </html>
