--- a/index.htm
+++ b/index.htm
@@ -78,6 +78,65 @@
             </div>
 
           </fieldset>
+          <fieldset class="address">
+            <legend>Endereço residencial</legend>
+
+            <div class="input-wrapper">
+              <label for="cep">CEP</label>
+              <input type="text" name="cep" id="cep">
+            </div>
+
+            <div class="flex">
+
+              <div class="input-wrapper flex-2">
+                <label for="street">Rua</label>
+                <input type="text" name="street" id="street" value="Rua das Flores"disabled>
+              </div>
+
+              <div class="input-wrapper flex-1">
+                <label for="number">Número</label>
+                <input type="number" name="number" id="number">
+              </div>
+
+            </div>
+
+            <div class="flex">
+
+              <div class="input-wrapper flex-2">
+                <label for="city">Cidade</label>
+                <input type="text" name="city" id="city" value="São Paulo" disabled>
+              </div>
+
+              <div class="input-wrapper flex-1">
+                <label for="state">Estado</label>
+                <input type="text" name="state" id="state" value="SP" disabled>
+              </div>
+
+            </div>
+          </fieldset>
+          <fieldset class="guardian">
+            <legend>Informações do responável</legend>
+
+            <div class="input-wrapper">
+              <label for="guardian">Nome do responsável</label>
+              <input type="text" name="guardian" id="guardian">
+              <small>
+                Principal responsável legal e contato de emergência
+              </small>
+            </div>
+            <div class="input-wrapper">
+              <label for="phone">Telefone</label>
+              <input type="text" name="phone" id="phone">
+            </div>
+            <div class="input-wrapper">
+              <label for="mail">Email</label>
+              <input type="email" name="mail" id="mail" required>
+              <div class="error">
+                <img src="assets/icons/alert-circle.svg" alt="">
+                <span>Insira um e-mail válido</span>
+              </div>
+            </div>
+          </fieldset>
         </form>
       </div>
     </main>
