--- a/index.htm
+++ b/index.htm
@@ -157,6 +157,57 @@
                 </div>
               </div>
             </div>
+
+            <div class="input-wrapper">
+              <label>Em qual esporte você gostaria de inscrever seu filho?</label>
+
+              <div class="radio-wrapper">
+
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" value="football" id="football">
+                  <img src="assets/icons/football.svg" alt="">
+                  <label for="football">Futebol</label>
+                </div>
+
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" value="basketball" id="basketball">
+                  <img src="assets/icons/basketball-02.svg" alt="">
+                  <label for="basketball">Basquete</label>
+                </div>
+
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" value="swimming" id="swimming">
+                  <img src="assets/icons/swimming.svg" alt="">
+                  <label for="swimming">Natação</label>
+                </div>
+
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" value="yoga" id="yoga">
+                  <img src="assets/icons/yoga-02.svg" alt="">
+                  <label for="yoga">Yoga</label>
+                </div>
+
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" value="volleyball" id="volleyball">
+                  <img src="assets/icons/volleyball.svg" alt="">
+                  <label for="volleyball">Volei</label>
+                </div>
+
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" value="boxing" id="boxing">
+                  <img src="assets/icons/boxing-glove-01.svg" alt="">
+                  <label for="boxing">Boxe</label>
+                </div>
+
+              </div>
+
+            </div>
           </fieldset>
         </form>
       </div>
